# morse-gadget

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: app.rs  events.rs  input.rs  main.rs  module.rs  morse.rs  network.rs  reboot.rs  types.rs
src/app/: chat.rs  components.rs  led_indicator.rs  styles.rs
