[package]
name = "riscv-tamagochi-ilaria"
version = "0.1.0"
authors = ["Pietro Tamilia <17928339+BRA1L0R@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
lto = true

[dependencies]
embassy-executor = { version = "0.5.0", features = ["arch-riscv32"] }
esp32c3-hal = { version = "0.15.0", features = [
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy",
    "async",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.3.0", features = [
    "esp32c3",
    "wifi",
    "esp-now",
    "async",
] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
esp32c3 = { version = "0.20.0", features = ["critical-section"] }
embedded-hal-async = "1.0.0"
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-sync = "0.5.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"

postcard = "1.0.8"
serde = { version = "1.0.197", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs.git" }
